fix audio embed too big on mobile

--- a/public_html/templates/default/css/source/style.scss
+++ b/public_html/templates/default/css/source/style.scss
@@ -1908,6 +1908,8 @@ div.modal-container.modal-standalone
 	}
 	.forum_post_info{width: 100%;}
 	.last_post{display: none;visibility: hidden;}
+
+	audio{width: 100%;}
 }
 /* MOBILE LANDSCAPE */
 @media only screen and (max-width: 480px) {
